# AutoMCP

./: .gitignore  404.html  LICENSE.md  README.md  demo.ipynb  example_config.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yaml.bak  docs.yml
api/cli/: index.html
api/documentation/: index.html
api/main/: index.html
api/manager/: index.html
api/mcp/: index.html
api/openapi/: index.html
api/overview/: index.html
api/prompt/: index.html
api/utils/: index.html
components/documentation_crawler/: index.html
components/mcp_generator/: index.html
components/openapi/: index.html
components/prompt_generator/: index.html
configuration/authentication/: index.html
configuration/mcp/: index.html
configuration/pagination/: index.html
configuration/rate_limiting/: index.html
configuration/retry/: index.html
development/contributing/: index.html
development/testing/: index.html
docs/: index.md
docs/api/: cli.md  documentation.md  main.md  manager.md  mcp.md  openapi.md  overview.md  prompt.md  utils.md
docs/components/: documentation_crawler.md  openapi.md  (+2 more)
scripts/: run_tests.py  test_mcp_discovery.py
search/: search_index.json
src/: __init__.py  constants.py  main.py  manager.py  models.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_main.py  test_manager.py  test_mcp_server.py  test_models.py  test_openapi_auth_helpers.py  test_openapi_models.py  test_openapi_spec.py  test_openapi_tools.py  test_openapi_utils.py  test_prompt_generator.py  test_utils.py
(+60 files in other folders)
